0.13.2.AP (PRE-RELEASE):
-----------------------
- Adds `DriverPriority` Feature
  * Asigns a higher priority to drivers loaded by RefindPlus
  * Ensures that such are loaded when other similar drivers exist (mainly in the firmware)
  * Currently tied to the `RansomDrives` Feature and only activated when that feature is active
- Adds `RansomDrives` Feature
  * Some types of firmware, notably on HP Notebooks, may lock some partitions
    - This renders them inaccessible or may even lead to RefindPlus hanging
  * Such partitions can be unlocked by setting a new `ransom_drives` configuration token
  * This option is currently always disabled on Apple firmware
- Adds `RescanDrivers` Feature
  * Controls scanning for newly revealed DXE drivers when connecting handles
    - Switch on or off with a new `rescan_drivers` configuration token
  * This was previously done by default but may negatively impact loading speed
  * Should only be activated when specifically required
    - Should not be required on most firmware
  * This option is currently always disabled on Apple firmware
- Adds `HaltSeconds` Function
  * Works as `PauseSeconds` does, but does not terminate on keypress
- Fixes Unicode Collation
  * Now checks for and uses Unicode Collation Protocol instances that support English
  * Previously simply selected the first instance found (Inherited)
  * This should allow proper support for languages using unicode text
- Improves `TransientBoot` Feature
  * Now removes pre-existing `PreviousBoot` instances when booting with this option set
- Improves `DirectBoot` Feature
  * Minimises screen shudder when the `ESC` key is held down to override DirectBoot
- Improves `ScreenShot` Feature
  * Properly limited to one (1) sreenshot per keypress
    - Removes limitation of the keypress not continuing beyond the on-screen message display
  * Fixes Screenshots being only functional for the main RefindPlus screen
    - This bug was introduced in v0.13.2.AN (Commit 99da7ce)