@@ -143,6 +143,8 @@ REFIT_CONFIG GlobalConfig = {
     /* ScaleUI = */ 0,
     /* DynamicCSR = */ 0,
     /* LogLevel = */ 0,
+    /* IconRowMove = */ 0,
+    /* IconRowTune = */ 0,
     /* ScreenR = */ -1,
     /* ScreenG = */ -1,
     /* ScreenB = */ -1,
